Update string concatenation to string formatting
Replaced all string concatenation instances with string formatting for better readability and performance in 'TornadoTaskGraph.java'. This includes updates within print statements, exception messages, and object property sets.